# WealthWise

./: .env  .env.bak  EXPO_54_MIGRATION.md  MICROINVESTING_SUMMARY.md  RAG-Integration-Success.md  RAG-Training-Success.md  README.md  init_sqlite.py  verify_quant_db.py  wealthwise.db
backend/: .gitignore  README.md  SETUP.md  (+4 more)
ml/: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  rag_ml_server.py  setup.py  simple_ml_server.py  train_rag.py
ml/api/: main.py
ml/api/routes/: advisor.py  anomaly.py  categorizer.py
ml/config/: settings.py  taxonomy.json
ml/core/: exceptions.py  models.py
ml/data/synthetic/: generator.py  personas.json  transactions.csv
ml/scripts/: audit_system.py  auto_fix_model.py  check_embeddings.py  check_models.py  clean_and_verify.py  force_inject_spacex.py  inspect_brain.py  setup_vector_db.py  startup_check.py  test_advisor.py  test_categorizer_bulk.py  test_chat_manual.py  verify_rag.py
ml/services/anomaly/: statistical.py  velocity.py
ml/services/categorizer/: base.py  keyword.py  llm.py  service.py
ml/services/rag/: advisor.py  chat.py  context_builder.py  embeddings.py  vector_store.py
ml/tests/: conftest.py
ml/tests/integration/: test_empty_state.py  test_full_system.py  test_live_isolation.py
ml/tests/unit/: test_anomaly.py  test_anomaly_math.py  test_api_routes.py  test_categorizer_hybrid.py  test_categorizer_keyword.py  test_categorizer_robust.py  test_core_logic.py  test_edge_cases.py  test_isolation_logic.py  test_rag_mocked.py  test_validation.py
ml/utils/: data_loader.py  rate_limiter.py
(+138 files in other folders)
